PHPOE-1492 - Fixed misalignment of photo message error

--- a/plugins/OpenEmis/webroot/css/kordit/style.css
+++ b/plugins/OpenEmis/webroot/css/kordit/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'kordit-fonts';
-	src:url('fonts/kordit-fonts.eot?-df68h5');
-	src:url('fonts/kordit-fonts.eot?#iefix-df68h5') format('embedded-opentype'),
-		url('fonts/kordit-fonts.ttf?-df68h5') format('truetype'),
-		url('fonts/kordit-fonts.woff?-df68h5') format('woff'),
-		url('fonts/kordit-fonts.svg?-df68h5#kordit-fonts') format('svg');
+	src:url('fonts/kordit-fonts.eot?x61v2t');
+	src:url('fonts/kordit-fonts.eot?#iefixx61v2t') format('embedded-opentype'),
+		url('fonts/kordit-fonts.ttf?x61v2t') format('truetype'),
+		url('fonts/kordit-fonts.woff?x61v2t') format('woff'),
+		url('fonts/kordit-fonts.svg?x61v2t#kordit-fonts') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,6 +23,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.kd-dashboard:before {
+	content: "\e636";
+}
 .kd-preview:before {
 	content: "\e635";
 }
